--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+language: cpp
 before_install:
 - sudo apt-get update -qq
 - sudo apt-get install -qq libboost-regex-dev libyaml-cpp-dev cmake libgtest-dev
@@ -8,4 +9,8 @@ before_install:
 - cd -
 script:
 - make test
-language: cpp
+notifications:
+  email:
+    recipients:
+      - alex.suhan@gmail.com
+    on_success: always
